@@ -267,8 +267,9 @@
     currently in use.</li>
 
 <li>Various path textboxes in the UI now recognize './' (or '.\') to mean
-    the current directory.  In Linux/UNIX, '~/' is also recognized to
-    mean your home directory.</li>
+    the current directory and '~/' (or '~\') is also recognized to
+    mean your home directory (for Windows, home directory will be your
+    'My Documents' folder).</li>
 
 <li>Large speedup in loading directories with many files in the ROM launcher.</li>
 
